<!-- res/layout/dialog_permissions.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_push_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_permission_push" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_email_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_permissions_email" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm" />

    </LinearLayout>
</LinearLayout>
